--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.115.12",
+    "openai>=1.76.2",
     "pydantic>=2.11.3",
     "python-dotenv>=1.1.0",
     "uvicorn>=0.34.2",
