--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,10 +30,10 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
+    "prettier": "^3.0.0",
     "tailwindcss": "^4.1.5",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
-    "vite": "^6.3.1",
-    "prettier": "^3.0.0"
+    "vite": "^6.3.1"
   }
 }
