--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
         "@vitejs/plugin-react": "^4.4.1",
         "autoprefixer": "^10.4.21",
         "eslint": "^9.26.0",
+        "eslint-config-prettier": "^10.1.2",
         "eslint-plugin-react-hooks": "^5.2.0",
         "eslint-plugin-react-refresh": "^0.4.20",
         "globals": "^16.0.0",
